# json-flattener

./: .cruft.json  .gitignore  EXAMPLE.ipynb  Makefile  README.md  environment.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: check-pull-request.yaml  pypi-publish.yml
docs/: conf.py  index.rst
examples/: books1-jsonified.tsv  books1.json
json_flattener/: __init__.py  cli.py  flattener.py
src/json_flattener/: __init__.py  cli.py  flattener.py
tests/: __init__.py  test_cli.py  test_flattener.py
tests/inputs/: badly-formatted.tsv
